@@ -1,5 +1,10 @@
 2013-11-13  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* Library.mdproj:
+	* FourDucks.x3dv: 
+
+2013-11-13  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* FredTheBunny.x3dv: 
 
 2013-11-13  Holger Seelig  <holger.seelig@yahoo.de>
